	shimbun directory (assuming the case `make install-package').
	(w3mhack-make-package): Use `w3mhack-generate-load-file'.
	(w3mhack-update-files-autoloads): New function.
	(w3mhack-generate-load-file): Allow the optional arg which
	overrides `w3mhack-load-file'; use `autoload-ensure-default-file'
	if it is available; provide the feature at the beginning of the
	file; also provide `w3m-autoloads' in XEmacs; use
	`w3mhack-update-files-autoloads'.

2004-04-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cgi-board.el (shimbun-clear-contents): Removed.
	(shimbun-make-contents): New method, which is a successor of the
	above method, but returns nil when missing a target article.

	* Makefile.in (tarball): Remove w3m-kwds.el and w3m-load.el.

	* configure.in, aclocal.m4: Add `--with-xml' option.

	* shimbun/sb-zdnet.el: Removed.

	* w3mhack.el (w3mhack-module-list): New function.
	(w3mhack-examine-modules): Use the above.
	(w3mhack-compile): Use `w3mhack-module-list' instead of
	`w3mhack-examine-modules'.
	(w3mhack-generate-load-file): Likewise; Insert ^L to avoid an
	error of `update-file-autoloads' of old emacsen.

2004-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-treat-image-size): Default to t.

	* w3m-filter.el (w3m-filter-asahi-shimbun): Use marker to limit
	the search bound.

2004-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-load-file): Save w3m-load.el file
	before performing `update-file-autoloads'.

2004-04-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (install-lisp): Do not install w3mhack.el.
	(install-package): Install neither w3mhack.el nor w3m-load.el.

2004-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-treat-image-size): Default to nil.
	(w3m-rendering-half-dump): Fix a logic determining whether to
	specify `-ppl' and `-ppc' options to the w3m command.

2004-04-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el: Create w3m-load.el.